--- a/liveServer/index.html
+++ b/liveServer/index.html
@@ -7,11 +7,9 @@
 </head>
 <body>
 <h1 id="heading">Students in the School of EIE:</h1>
-<button type="button" id="addButton">Add</button>
-<button type="button" id="addHeadingButton">Add Heading</button>
-<button type="button" id="YouTube">Youtube Link</button>
-<button type="button" id="Href">Add Text with Href</button>
+<button type="button" id="studentButton">Show Students</button>
 
-<div id="studentList"></div>
+
+
 </body>
 </html>
