--- a/liveServer/index.html
+++ b/liveServer/index.html
@@ -1,15 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<title>Class List</title>
-<meta charset="utf-8" />
-<script defer src="index.js"></script>
 </head>
 <body>
-<h1 id="heading">Students in the School of EIE:</h1>
-<button type="button" id="studentButton">Show Students</button>
+<h1>Class List</h1>
+<!-- 'input' is an empty element, it consists of single tag -->
+<input type="text" id="search-text" placeholder="Filter students">
+<div id="students">
+</div>
+<br>
+<label for="students">Search Parameter:</label>
+<br>
+<select id="searchOption">
+    <option value ="name">Name</option>
+    <option value="studentNumber">Student Number</option>
+    <option value="yearOfStudy">Year of Study</option>
+    <option value="electives">Electives</option>
 
-
-
+</select>
+<br>
+<br>
+<input type="text" id="new-student-text" placeholder="Name">
+<button id="add-student">Add new student</button>
+<script src="class-list-app.js">
+</script>
 </body>
 </html>
+<!-- See https://developer.mozilla.org/en-US/docs/Web/HTML -->
+<!-- Note the reference guide: -->
+<!-- https://developer.mozilla.org/en-US/docs/Web/HTML/Reference -->
