--- a/liveServer/index.html
+++ b/liveServer/index.html
@@ -22,6 +22,10 @@
 <br>
 <input type="text" id="new-student-text" placeholder="Name">
 <button id="add-student">Add new student</button>
+<br>
+<br>
+<input type="text" id="user-name">
+<button type="button" id="save-user">Save</button>
 <script src="class-list-app.js">
 </script>
 </body>
